namespace SalesTaxesKata.Domain.Taxation
{
    public abstract class Rounding
    {
        public abstract decimal Round(decimal tax);
    }
}